[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["AndersonStumpf <andersonreis.stumpf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
